fixed chat line height to be more readable.

--- a/vite-project/src/assets/Chat.css
+++ b/vite-project/src/assets/Chat.css
@@ -72,7 +72,7 @@
     border-style: solid;
     border-color: blueviolet;
     border-width: 5px;
-    line-height: 20px;
+    line-height: 1.5;
     display: flex;
     align-items: center;
 }
@@ -150,7 +150,6 @@
         left: 10px;
         right: 80px;
         font-size: 16px;
-        line-height: 16px;
         height: 15px;
         min-height: 15px;
         padding-bottom: 20px;
@@ -160,7 +159,7 @@
         top: 40px;
         left: 10px;
         right: 10px;
-        bottom: 60px;
+        bottom: 70px;
         padding: 8px;
     }
 
